minor style changes to site header

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -51,7 +51,7 @@
                             <a class="nav-item text-muted" href="{% url 'blog-list' %}">Blog</a>
                             <a class="nav-item nav-item-last text-muted" href="{% url 'home' %}#contact-section">Contact</a>
                         </nav>
-                        <div id="mobile-nav-background">
+                        <div id="mobile-nav-bg">
                             <img id="mobile-nav-cookie" src="{% static 'img/cookie-watermark-left.png' %}"/>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="nav-bg"></div>
+                <div class="header-bg"></div>
             </div>
             <!-- END HEADER -->
 
