--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -13,7 +13,7 @@
     <!-- START SECTION 1 -->
     <div class="page vh-95 col-2 col-1-md" id="section-1">
         <div id="landing-logo-container">
-            <div id="nav-bg-trigger" class="bg-image"></div>
+            <div id="header-bg-trigger" class="bg-image"></div>
             <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
         </div>
         <div id="landing-text-wrapper">
