--- a/static/styles/scss/_navigation.scss
+++ b/static/styles/scss/_navigation.scss
@@ -14,11 +14,13 @@
    color:$dark-grey;
 }
 
-.header-wrapper-bg-active .header-logo{
+
+// Variations for hiding and showing nav background and logo
+.header-wrapper-logo-active .header-logo{
    opacity: 1;
 }
 
-.header-wrapper-bg-active .nav-bg{
+.header-wrapper-bg-active .header-bg{
    width: 100%;
    height: 100%;
    background-color: $white;
@@ -26,7 +28,15 @@
    box-shadow: 0px 0px 25px rgba(0,0,0,0.2);
 }
 
-.nav-bg{
+.header-wrapper-nav-open .header-logo{
+   opacity: 1;
+}
+
+.header-wrapper-nav-open .header-bg{
+   opacity: 0;
+}
+
+.header-bg{
    position: absolute;
    width: 100%;
    height: 100%;
@@ -136,7 +146,7 @@
    }
 }
 
-#mobile-nav-background{
+#mobile-nav-bg{
    position:fixed;
    z-index:49;
    top:0px;
@@ -144,6 +154,7 @@
    right:0px;
    bottom:0px;
    background-color:white;
+
    @media (min-width: $screen-md){
        display:none;
    }
