--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -14,6 +14,10 @@ body {
   background-color: #fcfcfc;
 }
 
+.no-scroll {
+  overflow: none;
+}
+
 #wrapper {
   margin: 0px;
   padding: 0px;
@@ -1754,11 +1758,11 @@ select {
   color: #383a42;
 }
 
-.header-wrapper-bg-active .header-logo {
+.header-wrapper-logo-active .header-logo {
   opacity: 1;
 }
 
-.header-wrapper-bg-active .nav-bg {
+.header-wrapper-bg-active .header-bg {
   width: 100%;
   height: 100%;
   background-color: #fcfcfc;
@@ -1766,7 +1770,15 @@ select {
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
 }
 
-.nav-bg {
+.header-wrapper-nav-open .header-logo {
+  opacity: 1;
+}
+
+.header-wrapper-nav-open .header-bg {
+  opacity: 0;
+}
+
+.header-bg {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1876,7 +1888,7 @@ select {
   }
 }
 
-#mobile-nav-background {
+#mobile-nav-bg {
   position: fixed;
   z-index: 49;
   top: 0px;
@@ -1886,7 +1898,7 @@ select {
   background-color: white;
 }
 @media (min-width: 639px) {
-  #mobile-nav-background {
+  #mobile-nav-bg {
     display: none;
   }
 }
