Minor js functionality fixe for site nav

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -51,7 +51,7 @@
     <div class="page vh-65 p-t-xxl flex-y center-content-y" id="you-section-pre">
         <div class="text-center">
             <h1 class="no-m">How we do it</h1>
-            <h5 class="p-xxl">
+            <h5 class="p-y-xxl">
                 It's hard not to kick goals when everyone is on the same team, thats why it's important for us to get to know you and your business first. 
                 Once we understand your goals, limitations and opportunities, then we can get to work implementing the most effective solution, specifically tailored to your requirements. 
                 If you have an idea, we can impliment it while you can rest easy knowing that we utilize the same technology as some of the biggest companies online today, meaning our solutions are fast, scaleable and secure.
