Refactored imageit app js

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -24,7 +24,7 @@
                 <h5>Full-stack web development, cloud management and more! We leverage the technology that you don't care about, to achieve the results that you do!</h5>
             </div>
             <div>
-                <a class="text-muted" href="#contact-section"><div class="call-to-action">Contact Us!</div></a>
+                <a class="text-muted" href="#contact-section" tabindex="0"><div class="call-to-action">Contact Us!</div></a>
             </div>
         </div>
         <div id="landing-bg-container">
