--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -7,73 +7,77 @@
 {% endblock scripts %}
 
 {% block content %}
-<!-- START PAGE 1 -->
-<div class="page full-height col-2 col-1-sm" id="page1">
-    <div id="landing-text-wrapper">
-        {% if form.errors and not form.non_field_errors %}
-            <p class="errornote">
-            {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
-                </p>
-            {% endif %}
-
-            {% if form.non_field_errors %}
-                {% for error in form.non_field_errors %}
-                    <p class="errornote">
-                        {{ error }}
-                    </p>
-                {% endfor %}
-            {% endif %}
-
-            <div id="content-main">
-
-            {% if user.is_authenticated %}
+<div id="login-content">
+    <div class="page full-height col-2 col-1-md" id="section-1">
+        <div id="landing-text-wrapper">
+            {% if form.errors and not form.non_field_errors %}
                 <p class="errornote">
-                {% blocktranslate trimmed %}
-                    You are authenticated as {{ username }}, but are not authorized to
-                    access this page. Would you like to login to a different account?
-                {% endblocktranslate %}
-                </p>
+                {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
+                    </p>
+                {% endif %}
+    
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <p class="errornote">
+                            {{ error }}
+                        </p>
+                    {% endfor %}
+                {% endif %}
+    
+                <div id="content-main">
+    
+                {% if user.is_authenticated %}
+                    <p class="errornote">
+                    {% blocktranslate trimmed %}
+                        You are authenticated as {{ username }}, but are not authorized to
+                        access this page. Would you like to login to a different account?
+                    {% endblocktranslate %}
+                    </p>
+                {% endif %}
+    
+                <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+                    <div class="form-row">
+                        {{ form.username.errors }}
+                        <div class="input-container m-b-lg">
+                            <input class="input-field" type="text" placeholder="{{ form.username.label }}" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" {% if form.username.value != None %}value="{{ form.username.value|stringformat:'s' }}"{% endif %} maxlength="{{ form.username.field.max_length }}" {% if form.username.field.required %}required{% endif %}/>
+                            <i class="fa fa-user-o fa-input-icon"></i>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        {{ form.password.errors }}
+                        <div class="input-container m-b-xl">
+                            <input class="input-field"
+                            placeholder="{{ form.password.label }}"
+                            type="password"
+                            name="{{ form.password.name }}"
+                            id="{{ form.password.id_for_label }}"
+                            {% if form.password.value != None %}value="{{ form.password.value|stringformat:'s' }}"{% endif %}
+                            maxlength="{{ form.password.field.max_length }}"
+                            {% if form.password.field.required %}required{% endif %}/>
+                            <i class="fa fa-unlock-alt fa-input-icon"></i>
+                        </div>
+                        <input type="hidden" name="next" value="{{ next }}">
+                    </div>
+                    {% url 'admin_password_reset' as password_reset_url %}
+                    {% if password_reset_url %}
+                    <div class="password-reset-link">
+                        <a href="{{ password_reset_url }}">{% translate 'Forgotten your password or username?' %}</a>
+                    </div>
             {% endif %}
-
-            <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
-                <div class="form-row">
-                    {{ form.username.errors }}
-                    <div class="input-container m-b-lg">
-                        <input class="input-field" type="text" placeholder="{{ form.username.label }}" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" {% if form.username.value != None %}value="{{ form.username.value|stringformat:'s' }}"{% endif %} maxlength="{{ form.username.field.max_length }}" {% if form.username.field.required %}required{% endif %}/>
-                        <i class="fa fa-user-o fa-input-icon"></i>
+                    <div class="submit-row">
+                        <input class="btn btn-rounded w-100" type="submit" value="{% translate 'Log in' %}">
                     </div>
+                </form>
+    
                 </div>
-                <div class="form-row">
-                    {{ form.password.errors }}
-                    <div class="input-container m-b-xl">
-                        <input class="input-field"
-                        placeholder="{{ form.password.label }}"
-                        type="password"
-                        name="{{ form.password.name }}"
-                        id="{{ form.password.id_for_label }}"
-                        {% if form.password.value != None %}value="{{ form.password.value|stringformat:'s' }}"{% endif %}
-                        maxlength="{{ form.password.field.max_length }}"
-                        {% if form.password.field.required %}required{% endif %}/>
-                        <i class="fa fa-unlock-alt fa-input-icon"></i>
-                    </div>
-                    <input type="hidden" name="next" value="{{ next }}">
-                </div>
-                {% url 'admin_password_reset' as password_reset_url %}
-                {% if password_reset_url %}
-                <div class="password-reset-link">
-                    <a href="{{ password_reset_url }}">{% translate 'Forgotten your password or username?' %}</a>
-                </div>
-        {% endif %}
-                <div class="submit-row">
-                    <input class="btn w-100" type="submit" value="{% translate 'Log in' %}">
-                </div>
-            </form>
-
-            </div>
-    </div>
-    <div id="landing-logo-container">
-        <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
+        </div>
+        <div id="landing-logo-container">
+            <div id="header-bg-trigger" class="bg-image"></div>
+            <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
+        </div>
+        <div id="landing-bg-container">
+            <img class="bg-image" src="{% static 'img/landing-blob.svg' %}"/>
+        </div>
     </div>
 </div>
-<!-- END PAGE 1 -->
 {% endblock content %}
