fixed imageit static img location issue

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -38,7 +38,7 @@
         <div id="wrapper">
 
             <!-- START HEADER -->
-            <div id="header-wrapper" class="{% if request.path == '/home/' or request.path == '/' %}{% else %}header-wrapper-bg-active header-wrapper-logo-active{% endif %}">
+            <div id="header-wrapper" class="{% if request.path == '/home/' or request.path == '/' or request.path == '/admin/login/' %}{% else %}header-wrapper-bg-active header-wrapper-logo-active{% endif %}">
                 <div class="header-item" id="header-logo-wrapper">
                     <a href="{% url 'home' %}">
                         <img class="header-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
