--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1452,6 +1452,11 @@ select {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+@media (max-width: 918px) {
+  .blog-content {
+    box-shadow: 0px 0px 0px;
+  }
+}
 
 .blog-content a:hover {
   text-decoration: underline;
