update for re-deployment

--- a/blogs/templates/blogs/blog_detail.html
+++ b/blogs/templates/blogs/blog_detail.html
@@ -67,7 +67,7 @@
 </div>
 <div class="page center-content-x m-t-xxl blog-content-container">
     <div class="blog-content w-70 w-100-mdlg">
-        {{ object.formatted_markdown|safe }}
+        {{ object.content|safe }}
         <div class="blog-content-footer">
             <hr/>
             <p>{{ object.author_name }},</p>
