--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div id="blog-list-wrapper">
-    <div class="blog-list-header-container page page-padded flex-y" style="background-image: url({% static 'img/cookie-watermark-left.png' %})">
+    <div class="blog-list-header-container page page-padded flex-y" style="background-image: url('{% static 'img/cookie-watermark-left.png' %}')">
         <div class="blog-header w-100 p-y-xxxl">
             <div class="center-content-y center-content-xy-sm">
                 <div class="text-center-sm">
