--- a/dropzoneit/templates/dropzoneit/dropzoneit_admin_inline.html
+++ b/dropzoneit/templates/dropzoneit/dropzoneit_admin_inline.html
@@ -17,7 +17,7 @@
     </div>
 
 
-    <div class="dropzone-nojs-failover" style="">
+    <div class="dropzone-nojs-failover">
         <div class="js-inline-admin-formset inline-group" id="{{ inline_admin_formset.formset.prefix }}-group"
          data-inline-type="tabular"
          data-inline-formset="{{ inline_admin_formset.inline_formset_data }}">
