--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -118,13 +118,8 @@ code{
 blockquote{
     background-color:$very-light-grey;
     color: $grey;
-    margin: 0;
-    margin-top:1.5em;
-    margin-bottom:1.5em;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
-    padding-top: .05em;
-    padding-bottom: .05em;
+    margin: 1.5em 0px;
+    padding: 1em 1.5em;
     border-left: .4em $light-grey solid;
 }
 
