--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -781,13 +781,8 @@ code {
 blockquote {
   background-color: #F2F2F2;
   color: #6b6d74;
-  margin: 0;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  padding-top: 0.05em;
-  padding-bottom: 0.05em;
+  margin: 1.5em 0px;
+  padding: 1em 1.5em;
   border-left: 0.4em #aeb2bf solid;
 }
 
@@ -1451,6 +1446,7 @@ select {
   word-wrap: break-word;
   margin-top: 15px;
   margin-bottom: 15px;
+  color: black;
 }
 @media (max-width: 918px) {
   .blog-content {
