--- a/blogs/templates/blogs/blog_card_list.html
+++ b/blogs/templates/blogs/blog_card_list.html
@@ -4,8 +4,9 @@
         <p>No blogs matching your search</p>
     </div>
 {% else %}
-    {% for blog in blogs %}
-        <a class="text-muted" href="{% url 'blog-detail' blog.slug %}">
+    <div class="col-2 col-1-sm">
+        {% for blog in page_obj %}
+        <a class="text-muted blog-card-container" href="{% url 'blog-detail' blog.slug %}">
             <div class="blog-card">
                 <div class="blog-card-img-container center-content-xy">
                     <div class="blog-card-img-overlay"></div>
@@ -32,5 +33,24 @@
                 </div>
             </div>
         </a>
-    {% endfor %}
+        {% endfor %}
+    </div>
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a class="page-toggle" href="?page=1" data-page="1">&laquo; first</a>
+                <a class="page-toggle" href="?page={{ page_obj.previous_page_number }}" data-page="{{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="page-toggle" data-page="{{ page_obj.next_page_number }}">next</a>
+                <a class="page-toggle" data-page="{{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 {% endif %}
