--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -69,9 +69,10 @@
     <div id="blog-list-content-wrapper">
         <img id="blog-list-header-wave" src="{% static 'img/blog-img-frame.svg' %}"/>
         <div class="white-bg">
-            <div class="page col-2 col-1-sm p-y-xxxl" id="blog-card-list">
-                {% for blog in blogs %}
-                    <a class="text-muted" href="{% url 'blog-detail' blog.slug %}">
+            <div class="page p-y-xxxl" id="blog-card-list">
+                <div class="col-2 col-1-sm">
+                    {% for blog in page_obj %}
+                    <a class="text-muted blog-card-container" href="{% url 'blog-detail' blog.slug %}">
                         <div class="blog-card">
                             <div class="blog-card-img-container center-content-xy">
                                 <div class="blog-card-img-overlay"></div>
@@ -98,7 +99,26 @@
                             </div>
                         </div>
                     </a>
-                {% endfor %}
+                    {% endfor %}
+                </div>
+
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if page_obj.has_previous %}
+                            <a class="page-toggle" data-page="1">&laquo; first</a>
+                            <a class="page-toggle" data-page="{{ page_obj.previous_page_number }}">previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                        </span>
+
+                        {% if page_obj.has_next %}
+                            <a class="page-toggle" data-page="{{ page_obj.next_page_number }}">next</a>
+                            <a class="page-toggle" data-page="{{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                        {% endif %}
+                    </span>
+                </div>
             </div>
         </div>
     </div>
