--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -338,11 +338,14 @@
     box-shadow: -2px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
+.blog-card-container{
+    margin-bottom:8%;
+}
+
 .blog-card{
     position:relative;
     margin-top:1.2rem;
     margin-left:1.2rem;
-    margin-bottom:8%;
     min-height:8rem;
     box-shadow: -2px 3px 7px rgba(0, 0, 0, 0.25);
 }
