Pull recent master changes

--- a/blogs/templates/blogs/blog_list.html
+++ b/blogs/templates/blogs/blog_list.html
@@ -70,55 +70,7 @@
         <img id="blog-list-header-wave" src="{% static 'img/blog-img-frame.svg' %}"/>
         <div class="white-bg">
             <div class="page p-y-xxxl" id="blog-card-list">
-                <div class="col-2 col-1-sm">
-                    {% for blog in page_obj %}
-                    <a class="text-muted blog-card-container" href="{% url 'blog-detail' blog.slug %}">
-                        <div class="blog-card">
-                            <div class="blog-card-img-container center-content-xy">
-                                <div class="blog-card-img-overlay"></div>
-                                <img class="blog-card-img" src="{% if blog.thumbnail %}{{ blog.thumbnail.url }}{% endif %}"/>
-                            </div>
-                            <div class="blog-card-text-container flex-y">
-                                <div class="blog-card-header-container">
-                                    <div class="blog-card-header">
-                                        <small>{{ blog.author_name }}</small>
-                                        {% if blog.published %}
-                                            <small>{{ blog.published_on|date:"M. j, Y" }}  | <i class="fa fa-book-reader"></i> {{ blog.read_time }} min.</small>
-                                        {% else %}
-                                            <small>Draft. <i class="fa fa-pencil-ruler"></i></small>
-                                        {% endif %}
-                                    </div>
-                                    <div class="blog-card-title">
-                                        <h4>{{ blog.title }}</h4>
-                                    </div>
-                                </div>
-                                
-                                <div class="blog-card-description">
-                                    <small>{{ blog.description|truncatechars:100 }} </small>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    {% endfor %}
-                </div>
-
-                <div class="pagination">
-                    <span class="step-links">
-                        {% if page_obj.has_previous %}
-                            <a class="page-toggle" data-page="1">&laquo; first</a>
-                            <a class="page-toggle" data-page="{{ page_obj.previous_page_number }}">previous</a>
-                        {% endif %}
-
-                        <span class="current">
-                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                        </span>
-
-                        {% if page_obj.has_next %}
-                            <a class="page-toggle" data-page="{{ page_obj.next_page_number }}">next</a>
-                            <a class="page-toggle" data-page="{{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                        {% endif %}
-                    </span>
-                </div>
+                {% include 'blogs/blog_card_list.html' %}
             </div>
         </div>
     </div>
